# pc2drc

./: .gitignore  EXPERIMENTAL-stage-1-kernel-patch.sh  README.md  stage-0-init-script.sh  stage-0-start-script.sh  stage-1-kernel-patch.sh  stage-2-build-modules.sh  stage-3-pair-with-wiiu.py  stage-3-pair-with-wiiu.sh  stage-4-start-pc2drc.py  start-pc2drc.sh  xrandr-timings.txt
.github/ISSUE_TEMPLATE/: bug_report.md
drc-hostap/: README.DRC
drc-hostap/conf/: drc_pair.conf  generated_ap_normal.conf  get_psk.conf.orig  hostapd.config  wiiu_ap_normal.conf.DONOTTOUCH  wiiu_ap_normal.conf.orig.template  wiiu_ap_pairing.conf  wpa_supplicant_normal.conf
drc-hostap/hostapd/: Makefile  wiiu_ap_normal.conf
drc-hostap/netboot/: netboot  netboot.c
drc-hostap/src/common/: wpa_common.c  wpa_common.h
drc-hostap/wpa_supplicant/: Makefile  defconfig  get_psk.conf  test.conf  wpa_supplicant.config  wps_supplicant.c
drc-x264/: README.DRC  x264.h
drc-x264/encoder/: analyse.c  encoder.c  set.c
kernel-patch-files/: build-patched-kernel.sh  kernel_below_5_12_mac80211.patch  mac80211_rx.patch
kernel-patch-files/patches/: kernel_above_5_11_mac80211.patch
libdrc-vnc/drcvncclient/: .gitignore  Makefile  README  TODO  config.h  configure.ac
libdrc-vnc/drcvncclient/src/: Makefile  Makefile.am  drcvncclient-broken-mess.cpp  drcvncclient.cpp  drcvncclient.cpp.save
libdrc-vnc/drcvncclient/src/.deps/: drcvncclient.Po
libdrc-vnc/libdrc-thefloppydriver/: .gitignore  LICENSE  Makefile  README  TODO  configure  libdrc.pc.in
libdrc-vnc/vncconfig-files/: Xvnc-session-gnome
(+86 files in other folders)
